kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: starbucks
  template:
    metadata:
      labels:
        app: starbucks
    spec:
      containers:
      - name: starbucks-container
        image: azizaman/starbucks-app
        ports:
        - containerPort: 80
