kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: starbucks-service
spec:
  type: ClusterIP
  selector:
    app: starbucks
  ports:
    - port: 80
      targetPort: 80
